Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98125

qmllint crashes when there is an animation on a grouped property

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.3.0 Alpha
    • 6.2.1
    • QML: Tooling
    • None
    • Linux/Wayland
    • 332099038d5fe0020105dffc12550abef9dbd06b (qt/qtdeclarative/dev) 615cc8111c1399232a8d5348bed573793eba806d (qt/qtdeclarative/6.2)

    Description

      qmllint has a segfault with this QML file:

      import QtQuick 
      
      Rectangle
      {
          border
          {
              ColorAnimation on color {}
          }
      }
      

      Does not crash when animation is on 'color' property of rectangle or when assigning other property in border group.

       

      Tested with Qt 6.2.1 on Ubuntu 20.04.03.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            wbrebels Walter Brebels
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes