tests/auto/qml/qmllint/data/onBindingInGroupedProperty.qml
@@ -1,0 +1,10 @@
+import QtQuick
+
+Rectangle
+{
+    id: root
+    border
+    {
+        ColorAnimation on color { }
+    }
+}
